<resources>
    <string name="google_maps_api_key">AIzaSyB1nh0ebCdPdhwAgFsqW55vDit04l66oSM</string>

    <string name="app_name">Courier Service</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="top">top</string>
    <string name="new_employee">New Employee</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_assign_work_to_this_employee">Do you want to assign work to this employee?</string>
    <string name="message">Message</string>
    <string name="title">Title / Job Id</string>
    <string name="description">Description</string>
    <string name="assign">Assign</string>
    <string name="new_work">New Work</string>
    <string name="no">No</string>
    <string name="check_work_acceptence">Check Work Acceptence</string>
    <string name="work_description">Work description</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="done">Done</string>
    <string name="notdone">Not Done</string>
    <string name="nav_header_bg">Nav header bg</string>
    <string name="no_of_work">No of Work</string>
    <string name="work_image">Work Image</string>
    <string name="work_status_accept">Work Status: Accept</string>
    <string name="work_logo">Work Logo</string>
    <string name="close_dialog">Close Dialog</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="admin_email">Admin Email</string>
    <string name="admin_password">Admin Password</string>
    <string name="employee">Employee</string>
    <string name="icon">ICON</string>
    <string name="map_current_location">Map current location</string>
    <string name="phone_no">00000000000</string>
    <string name="edit_button">edit button</string>
    <string name="pending_works">Pending Works</string>
    <string name="accepted_works">Accepted Works</string>
    <string name="employee_0">Employee: 0</string>
    <string name="active_3">Active: 3</string>
    <string name="wors_19">Works: 19</string>
    <string name="imageview">IMAGEVIEW</string>
    <string name="admin_info"><ul>Admin Info</ul></string>
    <string name="developers_email">md.sadman.shams@gmail.com</string>
    <string name="_10">10</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="authentication">Authentication</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_old_email">Enter Old Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="set_destination">Set Destination</string>
    <string name="_0">0</string>
    <string name="fare">Fare</string>
    <string name="drop">Drop</string>
    <string name="pickup">Pickup</string>
    <string name="time">Time</string>
</resources>
