<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/workTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:text="@string/new_work"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="19sp"
            app:layout_constraintEnd_toStartOf="@+id/assignedIV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/workDescTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:maxLines="3"
            android:text="@string/work_description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/assignedIV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workTitleTV" />

        <ImageView
            android:id="@+id/assignedIV"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/check_work_acceptence"
            android:src="@drawable/assign_black"
            app:layout_constraintBottom_toTopOf="@+id/doneBTN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/doneBTN"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/accept_deny_btn_bg"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/notDoneBTN"
            app:layout_constraintTop_toBottomOf="@+id/workDescTV" />

        <Button
            android:id="@+id/notDoneBTN"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/accept_deny_btn_bg"
            android:text="@string/notdone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/doneBTN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workDescTV" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>