<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/taskTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/new_work"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="19sp"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@+id/assignIV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/taskDescTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/work_description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@+id/assignIV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskTitleTV" />

        <ImageView
            android:id="@+id/assignIV"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/check_work_acceptence"
            android:src="@drawable/not_assign_gray"
            app:layout_constraintBottom_toTopOf="@+id/acceptBTN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/acceptBTN"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/accept_deny_btn_bg"
            android:text="@string/accept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/denyBTN"
            app:layout_constraintTop_toBottomOf="@+id/taskDescTV" />

        <Button
            android:id="@+id/denyBTN"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/accept_deny_btn_bg"
            android:text="@string/deny"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/acceptBTN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDescTV" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>